# consciousness-nexus

./: .dockerignore  .gitattributes  .gitignore  ABYSSAL_IMPLEMENTATION_PLAN.md  ARCHITECTURAL_COMPLEXITY_ANALYSIS.md  ASCII_3D_MATRIX_WORKFLOW.txt  CODE_OF_CONDUCT.md  CONSCIOUSNESS_COMMAND_CENTER.py  CONSCIOUSNESS_GUI_EVOLUTION.md  CONSCIOUSNESS_GUI_PREVIEW_PROMPT.md  CONSCIOUSNESS_MASTER_ACHIEVEMENT.md  CONSCIOUSNESS_MATRIX_BLUEPRINT.md  CONSCIOUSNESS_SECURITY_GAPS_ANALYSIS.py  CONTRIBUTING.md  Dockerfile  Dockerfile.simple  FOR_ALL_SYSTEMS_GUIDE.md  GLOBAL_USAGE_GUIDE.md  HYPERLIST_TRUTH_ENGINEERING_REVIEW.md  LICENSE  MANIFEST.in  MASTER_PLANNING_COMPLETE.md  MASTER_TECHNICAL_KNOWLEDGE_BASE.md  MEGA_AUTO_RECURSIVE_WORKFLOW.md  MGLOBAL.py  MISSING_COMPONENTS.md  PACKAGE_DISTRIBUTION_GUIDE.md  PORT_MAPPING.md  PRODUCTION_ROADMAP_COMPLETE.md  PUSH_TO_GITHUB.md  QUEUE_TASKS_IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  STARTUP_README.md  SUBLAYER_META_PARSER_EXECUTION.py  SUPER_ELITE_CHAIN_COMPLETE_REPORT.md  SUPER_ELITE_MULTI_AI_CHAIN.md  SWARM_ULTRATHINK_REVERSE_ENGINEERING.md  ULTRA_API_DEBUG_RUN_COMPLETE.md  ULTRA_API_MAXIMIZER.md  (+96 more)
.claude/: settings.local.json
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
COS/: package.json
MASTER_INDEX/evolution/: gen_latest.json
MASTER_INDEX/sbom/: python_packages.json  rust_packages.json  sbom.json
consciousness-circuit-breaker/: Cargo.toml
consciousness-circuit-breaker/benches/: circuit_breaker_bench.rs
consciousness-circuit-breaker/src/: lib.rs  main.rs
consciousness-circuit-breaker/src/core/: breaker.rs  config.rs  error.rs  health.rs  mod.rs  sliding_window.rs  state.rs
consciousness-circuit-breaker/src/distributed/: coordinator.rs  mod.rs  state_sync.rs
consciousness-circuit-breaker/src/metrics/: collector.rs  mod.rs
consciousness-circuit-breaker/src/ultrathought/: engine.rs  mod.rs  thought.rs  trampoline.rs
consciousness-dashboard/: Dockerfile  README.md  nginx.conf  package.json  vite.config.ts
consciousness-dashboard/src/: App.tsx  main.tsx
consciousness-dashboard/src/components/: Layout.tsx
consciousness-dashboard/src/pages/: ApiDocs.tsx  Dashboard.tsx  Evolution.tsx  Monitoring.tsx  Settings.tsx  Validation.tsx
consciousness-sdk-go/: README.md  consciousness.go  go.mod
consciousness-sdk-js/: .eslintrc.json  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
consciousness-sdk-js/src/: index.ts
consciousness-sdk-rust/: Cargo.toml  README.md
consciousness-sdk-rust/src/: client.rs  error.rs  lib.rs  models.rs
consciousness_suite/: __init__.py  main.py
consciousness_suite/abyssal/: __init__.py
consciousness_suite/analysis/: __init__.py  elite_analyzer.py  executive_synthesizer.py  llm_orchestrator.py  platform_synthesizer.py  predictive_engine.py  quantum_clustering.py  temporal_tracker.py
consciousness_suite/api/: __init__.py  api_orchestrator.py  intelligence_amplifier.py  ultra_maximizer.py  value_extractor.py
consciousness_suite/chaos/: __init__.py  fault_injection.py  observability_hooks.py  resilience_tests.py
consciousness_suite/chaos/steadybit/: __init__.py  actions.py  experiments.py  extensions.py
consciousness_suite/core/: __init__.py  async_utils.py  base.py  config.py  data_models.py  logging.py
consciousness_suite/mesh_services/: __init__.py  adaptive_orchestrator.py  elite_mesh_core.py  predictive_scaler.py  quality_gatekeeper.py  self_evolution_engine.py  service_mesh_router.py
consciousness_suite/observability/: __init__.py  logging_bridge.py  metrics.py  middleware.py  otel_config.py  propagation.py
consciousness_suite/observability/adaptive/: __init__.py  aggregator.py  cardinality.py  cost_tracker.py  filter.py  optimizer.py  sampler.py
consciousness_suite/observability/ai_platform/: __init__.py
consciousness_suite/observability/api/: __init__.py  ai_gateway.py  gateway_metrics.py  rate_limiter.py
consciousness_suite/observability/business/: __init__.py  customer_journey.py  error_budget.py  revenue_impact.py  sli_calculator.py  slo_manager.py
consciousness_suite/observability/database/: __init__.py  connection_pool.py  postgres_exporter.py  query_analyzer.py
consciousness_suite/observability/events/: __init__.py  cloudevents.py  correlation.py  event_router.py  event_store.py  k8s_events.py
consciousness_suite/observability/finops/: __init__.py  cost_attribution.py  focus_exporter.py  telemetry_optimizer.py  waste_detection.py
consciousness_suite/observability/gitops/: __init__.py  change_correlation.py  deployment_tracker.py
consciousness_suite/observability/greenops/: __init__.py  carbon_calculator.py  energy_tracker.py  sustainability_dashboard.py
consciousness_suite/observability/incidents/: __init__.py  escalation.py  (+2 more)
consciousness_suite/orchestration/: __init__.py  mega_auto_workflow.py  recursive_chain_ai.py
docs/: vector_matrix_architecture.md
docs/api/: README.md
gap_consciousness_results/: gap_analysis.json  gap_consciousness_synthesis.json
hyperzerocopy-observer/: Cargo.toml
hyperzerocopy-observer/src/: daemon.rs  ring.rs  watch.rs
monitoring/: loki-config.yml  otel-collector-config.yml  prometheus.yml  promtail-config.yml  tempo.yml
monitoring/alertmanager/: alertmanager.yml
multi_websearch_results/: consciousness_session_1.json  consciousness_session_2.json  consciousness_session_3.json  synthesis.json
nginx/: nginx.conf
playwright-e2e-testing/: package.json  playwright.config.ts
playwright-e2e-testing/tests/: api-auth.spec.ts  api-evolution.spec.ts  api-health.spec.ts  dashboard.spec.ts
scripts/: demo_e2e_testing.ps1  demo_e2e_testing.py  generate_sbom.ps1  generate_sbom.py  run_playwright_e2e.ps1
src/: binaryTreeGenerator.ts  extremumNexusV3.py  quantumNexusSingularity.py  toposGovernance.ts  voidController.ts
tests/: __init__.py  test_api_server.py  test_base.py  test_consciousness_suite_core_base.py  test_evolution.py
ultimate_consciousness_results/: experiments_plan.json  gap_analysis.json  gap_synthesis.json  ultimate_synthesis.json
(+85 files in other folders)
