[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consciousness-suite"
version = "2.0.0"
description = "Enterprise-grade Consciousness Computing Suite with automatic safety systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "consciousness", "safety", "security", "evolution", "validation"]
dependencies = [
    "asyncio-mqtt>=0.11.1",
    "websockets>=10.4",
    "aiohttp>=3.8.4",
    "httpx>=0.24.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "umap-learn>=0.5.3",
    "hdbscan>=0.8.28",
    "faiss-cpu>=1.7.3",
    "flask>=2.2.0",
    "flask-cors>=4.0.0",
    "dash>=2.6.0",
    "plotly>=5.10.0",
    "structlog>=22.1.0",
    "rich>=12.5.0",
    "tqdm>=4.64.0",
    "cryptography>=38.0.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.6.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "orjson>=3.8.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.1.0",
    "black>=22.6.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.971",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "safety>=2.3.0",
]
gpu = [
    "torch>=1.12.0",
    "transformers>=4.21.0",
    "accelerate>=0.15.0",
]
quantum = [
    "qiskit>=0.39.0",
]

[project.scripts]
consciousness-orchestrator = "auto_recursive_chain_ai:main"
consciousness-evolution = "verified_consciousness_evolution:main"
consciousness-safety = "consciousness_master_integration:main"

[project.urls]
Homepage = "https://github.com/DAMIANWNOROWSKI/consciousness-suite"
Documentation = "https://consciousness-suite.readthedocs.io/"
Repository = "https://github.com/DAMIANWNOROWSKI/consciousness-suite"
Issues = "https://github.com/DAMIANWNOROWSKI/consciousness-suite/issues"

[tool.setuptools]
packages = ["consciousness_suite"]
include-package-data = true

[tool.setuptools.package-data]
consciousness_suite = [
    "*.json",
    "*.yaml",
    "*.md",
    "templates/*",
    "configs/*",
    "data/*",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["consciousness_suite"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "api: marks tests as API tests",
    "evolution: marks tests as evolution system tests",
    "safety: marks tests as safety system tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:Pydantic V1:DeprecationWarning",
    "ignore:.*pydantic.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["consciousness_suite"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 60
