[package]
name = "consciousness-circuit-breaker"
version = "1.0.0"
edition = "2021"
authors = ["Consciousness Nexus <nexus@consciousness.ai>"]
description = "Production-grade circuit breaker with recursive ultrathought execution - ZERO SIMULATION"
license = "MIT"
repository = "https://github.com/consciousness-nexus/circuit-breaker"
keywords = ["circuit-breaker", "resilience", "distributed", "consciousness", "ultrathought"]
categories = ["asynchronous", "concurrency", "network-programming"]

[lib]
name = "consciousness_circuit_breaker"
path = "src/lib.rs"

[[bin]]
name = "consciousness-breaker"
path = "src/main.rs"

[features]
default = ["ultrathought"]
full = ["prometheus", "ultrathought"]
prometheus = ["prometheus-client"]
ultrathought = []

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# Concurrency primitives
dashmap = "5.5"
parking_lot = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }

# Metrics - REAL, NOT SIMULATED
prometheus-client = { version = "0.22", optional = true }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing - REAL OBSERVABILITY
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# System metrics - REAL DATA (cross-platform)
sysinfo = "0.30"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"

[[bench]]
name = "circuit_breaker_bench"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[profile.bench]
lto = "thin"
codegen-units = 4
